# Rust-Matrix-Project

./: .gitignore  Cargo.toml  README.md  input.json
src/: main.rs  matrix.rs  operation.rs
src/cli/: arguments.rs  mod.rs
