[package]
name = "sample_code"
version = "0.1.0"
authors = ["Matthew Krohn <matthew.d.krohn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam = "0.7"
structopt = "0.3.5"
